add station to route v 0.71a

--- a/src/by/htp/ticketoffice/localization/local.properties
+++ b/src/by/htp/ticketoffice/localization/local.properties
@@ -2,9 +2,9 @@
 
 #for stationsPage.jsp
 local.errorAddRoute = You haven't entered name of route
-local.nameOfDeleteRoute = Delete route
-local.nameOfEditRoute = Edit route
-local.nameOfAddNewRoute = Add new route
+local.nameOfDeleteStation = Delete station
+local.nameOfEditStation = Edit station
+#local.nameOfAddNewStation = Add new station
 local.addRoute1 = Enter name of route
 local.addRoute2 = Add route
 #for addStationPage.jsp
