--- a/src/by/htp/ticketoffice/localization/local_en.properties
+++ b/src/by/htp/ticketoffice/localization/local_en.properties
@@ -2,8 +2,8 @@
 
 #for stationsPage.jsp
 local.errorAddRoute = You haven't entered name of route
-local.nameOfDeleteRoute = Delete route
-local.nameOfEditRoute = Edit route
+local.nameOfDeleteStation = Delete station
+local.nameOfEditStation = Edit station
 local.nameOfAddNewRoute = Add new route
 local.addRoute1 = Enter name of route
 local.addRoute2 = Add route
